--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 #img-div {
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
     max-width: 100%;
 }
 
-img {
+#image {
+    display: block;
+    margin: 0 auto;
     max-width: 100%;
 }
