--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,46 @@
     align-items: center;
     justify-content: center; */
     max-width: 100%;
+    background-color: white;
 }
-
+#title{
+    padding-top: 40px;
+    font-family: Arial;
+    text-align: center;
+}
+#titlecaption{
+    text-align: center;
+    font-family: Arial;
+    padding-top: 10px;
+}
+#main{
+    background-color:#eee;
+}
 #image {
     display: block;
     margin: 0 auto;
     max-width: 100%;
+}
+#img-caption{
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+    font-family: Arial;
+}
+#tribute-info{
+    text-align: center;
+    font-weight: bold;
+    font-family: Arial;
+    font-size: 20px;
+}
+#listitem{
+    align-items: center;
+    font-size: 14px;
+    font-family: Arial;
+}
+#ltitle{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 20px;
+    padding-bottom: 5px;
 }
