--- a/css/style.css
+++ b/css/style.css
@@ -34,15 +34,25 @@
     font-weight: bold;
     font-family: Arial;
     font-size: 20px;
+    padding-top: 20px;
 }
 #listitem{
     align-items: center;
     font-size: 14px;
     font-family: Arial;
+    word-wrap: break-word;
+  align-items: center;
+  justify-content: center;
 }
+
 #ltitle{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 20px;
     padding-bottom: 5px;
+}
+#end{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
 }
